updated coupon code
