# src/routes/routes.ts
@@ -136,9 +136,19 @@ const models: TsoaRoute.Models = {
         "type": {"dataType":"nestedObjectLiteral","nestedProperties":{"itemWeightUnit":{"dataType":"string","required":true},"itemWeight":{"dataType":"double","required":true},"itemStockStatus":{"dataType":"string","required":true},"itemDiscountedPrice":{"dataType":"double","required":true},"itemOriginalPrice":{"dataType":"double","required":true},"itemQuantity":{"dataType":"double","required":true},"itemImageUrl":{"dataType":"array","array":{"dataType":"string"},"required":true},"itemDescription":{"dataType":"string","required":true},"itemName":{"dataType":"string","required":true},"itemId":{"dataType":"string","required":true}},"validators":{}},
     },
     // WARNING: This file was auto-generated with tsoa. Please do not modify it. Re-run tsoa to re-generate this file: https://github.com/lukeautry/tsoa
+    "CouponModelType": {
+        "dataType": "refAlias",
+        "type": {"dataType":"nestedObjectLiteral","nestedProperties":{"usageCount":{"dataType":"double","required":true},"usageLimit":{"dataType":"double","required":true},"maximumOrderValue":{"dataType":"string","required":true},"minimumOrderValue":{"dataType":"string","required":true},"expiryDate":{"dataType":"datetime","required":true},"startDate":{"dataType":"datetime","required":true},"discountValue":{"dataType":"string","required":true},"discountType":{"dataType":"string","required":true},"couponCode":{"dataType":"string","required":true},"id":{"dataType":"union","subSchemas":[{"dataType":"string"},{"dataType":"enum","enums":[null]}],"required":true}},"validators":{}},
+    },
+    // WARNING: This file was auto-generated with tsoa. Please do not modify it. Re-run tsoa to re-generate this file: https://github.com/lukeautry/tsoa
+    "ExposedCouponModel": {
+        "dataType": "refAlias",
+        "type": {"dataType":"nestedObjectLiteral","nestedProperties":{"values":{"dataType":"union","subSchemas":[{"ref":"CouponModelType"},{"dataType":"enum","enums":[null]}],"required":true},"discountedAmount":{"dataType":"union","subSchemas":[{"dataType":"double"},{"dataType":"enum","enums":[null]}],"required":true},"applied":{"dataType":"boolean","required":true},"message":{"dataType":"string","required":true}},"validators":{}},
+    },
+    // WARNING: This file was auto-generated with tsoa. Please do not modify it. Re-run tsoa to re-generate this file: https://github.com/lukeautry/tsoa
     "_CartResponseType": {
         "dataType": "refAlias",
-        "type": {"dataType":"nestedObjectLiteral","nestedProperties":{"additionalInfo":{"dataType":"nestedObjectLiteral","nestedProperties":{"cartNote":{"dataType":"string","required":true},"savingsMessage":{"dataType":"string","required":true}},"required":true},"storeInfo":{"dataType":"nestedObjectLiteral","nestedProperties":{"storeAddress":{"dataType":"string","required":true},"storeContactPerson":{"dataType":"string","required":true},"storePhone":{"dataType":"string","required":true},"storeName":{"dataType":"string","required":true}},"required":true},"orderSummary":{"dataType":"nestedObjectLiteral","nestedProperties":{"discount":{"dataType":"double","required":true},"saved":{"dataType":"string","required":true},"deliveryCharges":{"dataType":"double","required":true},"freeDeliveryThreshold":{"dataType":"double","required":true},"deliverytime":{"dataType":"string","required":true},"total":{"dataType":"double","required":true},"subTotal":{"dataType":"double","required":true}},"required":true},"recommendedItems":{"dataType":"array","array":{"dataType":"refAlias","ref":"_CartReponseItem"},"required":true},"items":{"dataType":"array","array":{"dataType":"refAlias","ref":"_CartReponseItem"},"required":true},"cartId":{"dataType":"string","required":true},"aiStoreId":{"dataType":"string","required":true}},"validators":{}},
+        "type": {"dataType":"nestedObjectLiteral","nestedProperties":{"coupon":{"ref":"ExposedCouponModel","required":true},"additionalInfo":{"dataType":"nestedObjectLiteral","nestedProperties":{"cartNote":{"dataType":"string","required":true},"savingsMessage":{"dataType":"string","required":true}},"required":true},"storeInfo":{"dataType":"nestedObjectLiteral","nestedProperties":{"storeAddress":{"dataType":"string","required":true},"storeContactPerson":{"dataType":"string","required":true},"storePhone":{"dataType":"string","required":true},"storeName":{"dataType":"string","required":true}},"required":true},"orderSummary":{"dataType":"nestedObjectLiteral","nestedProperties":{"discount":{"dataType":"double","required":true},"saved":{"dataType":"string","required":true},"deliveryCharges":{"dataType":"double","required":true},"freeDeliveryThreshold":{"dataType":"double","required":true},"deliverytime":{"dataType":"string","required":true},"total":{"dataType":"double","required":true},"subTotal":{"dataType":"double","required":true}},"required":true},"recommendedItems":{"dataType":"array","array":{"dataType":"refAlias","ref":"_CartReponseItem"},"required":true},"items":{"dataType":"array","array":{"dataType":"refAlias","ref":"_CartReponseItem"},"required":true},"cartId":{"dataType":"string","required":true},"aiStoreId":{"dataType":"string","required":true}},"validators":{}},
     },
     // WARNING: This file was auto-generated with tsoa. Please do not modify it. Re-run tsoa to re-generate this file: https://github.com/lukeautry/tsoa
     "_OrderResponse": {
@@ -274,11 +284,6 @@ const models: TsoaRoute.Models = {
     "CartItemsModelType": {
         "dataType": "refAlias",
         "type": {"dataType":"nestedObjectLiteral","nestedProperties":{"itemExternalId":{"dataType":"union","subSchemas":[{"dataType":"string"},{"dataType":"enum","enums":[null]}],"required":true},"itemRecommended":{"dataType":"boolean","required":true},"itemWeightUnit":{"dataType":"string","required":true},"itemWeight":{"dataType":"double","required":true},"itemStockStatus":{"dataType":"string","required":true},"itemDiscountedPrice":{"dataType":"double","required":true},"itemOriginalPrice":{"dataType":"double","required":true},"itemQuantity":{"dataType":"double","required":true},"itemImageUrl":{"dataType":"string","required":true},"itemDescription":{"dataType":"string","required":true},"itemName":{"dataType":"string","required":true},"id":{"dataType":"string"}},"validators":{}},
-    },
-    // WARNING: This file was auto-generated with tsoa. Please do not modify it. Re-run tsoa to re-generate this file: https://github.com/lukeautry/tsoa
-    "CouponModelType": {
-        "dataType": "refAlias",
-        "type": {"dataType":"nestedObjectLiteral","nestedProperties":{"usageCount":{"dataType":"double","required":true},"usageLimit":{"dataType":"double","required":true},"maximumOrderValue":{"dataType":"string","required":true},"minimumOrderValue":{"dataType":"string","required":true},"expiryDate":{"dataType":"datetime","required":true},"startDate":{"dataType":"datetime","required":true},"discountValue":{"dataType":"string","required":true},"discountType":{"dataType":"string","required":true},"couponCode":{"dataType":"string","required":true},"id":{"dataType":"string"}},"validators":{}},
     },
     // WARNING: This file was auto-generated with tsoa. Please do not modify it. Re-run tsoa to re-generate this file: https://github.com/lukeautry/tsoa
     "JWTAuthResponse": {
